class Register(var value: UByte = 0u) {
}